syntax = "proto3";

option csharp_namespace = "Analytics.Api.Grpc";

package payments;

service PaymentAnalyticsGrpc {
  rpc GetRevenueStats (GetRevenueStatsRequest) returns (RevenueStatsResponse);
  rpc GetDailyRevenue (GetDailyRevenueRequest) returns (DailyRevenueResponse);
  rpc GetTopSellers (GetTopSellersRequest) returns (TopSellersResponse);
  rpc GetTopBuyers (GetTopBuyersRequest) returns (TopBuyersResponse);
}

message GetRevenueStatsRequest {
  string start_date = 1;
  string end_date = 2;
}

message RevenueStatsResponse {
  double total_revenue = 1;
  double total_platform_fees = 2;
  int32 total_transactions = 3;
  int32 completed_orders = 4;
  int32 pending_orders = 5;
  int32 refunded_orders = 6;
  double average_order_value = 7;
  double revenue_today = 8;
  double revenue_this_week = 9;
  double revenue_this_month = 10;
}

message GetDailyRevenueRequest {
  int32 days = 1;
}

message DailyRevenueResponse {
  repeated DailyRevenueStat daily_stats = 1;
}

message DailyRevenueStat {
  string date = 1;
  double revenue = 2;
  double platform_fees = 3;
  int32 order_count = 4;
}

message GetTopSellersRequest {
  int32 limit = 1;
  string period = 2;
}

message TopSellersResponse {
  repeated TopSeller sellers = 1;
}

message TopSeller {
  string seller_id = 1;
  string username = 2;
  double total_sales = 3;
  int32 order_count = 4;
  double average_order_value = 5;
}

message GetTopBuyersRequest {
  int32 limit = 1;
  string period = 2;
}

message TopBuyersResponse {
  repeated TopBuyer buyers = 1;
}

message TopBuyer {
  string buyer_id = 1;
  string username = 2;
  double total_spent = 3;
  int32 order_count = 4;
}
